testsuite/tests/module/mod2.stderr

mod2.hs:3:1: error:
    Could not find module ‘N’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
